# ejercicios-CVII

./: Style_Transfer_Losses.py  inicializacion_matrices.py  metodos_IE.py  metodos_gradiente.py  metodos_perturbacion.py  modelos_T1.py  pyproject.toml  representaciones_fotos.py  utils.py
src/: __init__.py  constants.py
src/explainability/: __init__.py  deconv_net.py  deep_dream.py  feature_inversion.py  gradient_ascent.py  guided_backprop.py  input_x_gradient.py  integrated_gradients.py  occlusion.py  rise.py  saliency_maps.py  shap.py  smooth_gradient.py
src/models/: __init__.py  alexnet.py  resnet.py  unet.py  vgg.py
src/project_3.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/representations/: __init__.py  depth_maps.py  implicit_functions.py  point_clouds.py  surface_normals.py  voxels.py
src/style_transfer/: __init__.py  content_loss.py  style_loss.py  total_variation_loss.py
src/upsampling/: __init__.py  bed_of_nails.py  bilinear_interpolation.py  max_unpooling.py  nearest_neighbor.py
src/utils/: __init__.py  detection_utils.py  metrics.py  normalization.py
tests/: conftest.py  test_detection_utils.py  test_explainability.py  test_metrics.py  test_models.py  test_representations.py  test_style_transfer.py  test_upsampling.py
