[project]
name = "project-3"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
    "black==24.10.0",
    "ruff==0.8.4",
    "pylint==3.3.2",
    "flake8==7.1.1",
    "flake8-pyproject>=1.2.3",
    "mypy==1.13.0",
    "complexipy==1.2.0",
    "isort==5.13.2",
    "mkdocs==1.6.1",
    "mkdocs-material==9.5.49",
    "hydra-core>=1.3.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "requests>=2.32.3",
    "pillow>=11.3.0",
    "ipykernel>=6.30.1",
    "types-requests>=2.32.4.20250913",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203"]

[tool.mypy]
ignore_missing_imports = true

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "run: mark the order of the test."
]


# Download torch without CUDA

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu" },
]
torchvision = [
  { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true